<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>helmet_bringup</name>
  <version>1.0.0</version>
  <description>Launch files and configuration for MuSoHu helmet sensors</description>
  <maintainer email="musohu@example.com">MuSoHu Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for sensor nodes -->
  <exec_depend>witmotion_ros2</exec_depend>
  <exec_depend>rslidar_sdk</exec_depend>
  <exec_depend>zed_wrapper</exec_depend>
  <exec_depend>audio_common</exec_depend>
  <exec_depend>respeaker_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>